# SwiftLogisticReg

./: LICENSE  README  README.md  setup.py
.github/workflows/: python-publish.yml
SwiftLogisticReg/: __init__.py
fastlogistic/: setup.cfg
fastlogistic.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
lib/: logistic_cpu.py  logistic_gpu.py
