[metadata]
name = "fastlogistic"
version = "0.1"
author = "Nechba Mohammed, Mouhajir Mohamed, and Sedjari Yassine"
author_email = "mohammdnechba@gmail.com"
description = "Efficient logistic regression in Python with GPU support"
long_description = "file: ../README.md"
long_description_content_type = "text/markdown"
url = "https://github.com/NechbaMohammed/fastlogistic"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

